--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,7 @@ commands=
 
   # set up the cluster again
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars @ceph-override.json --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
@@ -83,6 +84,7 @@ commands=
 
   # set up the cluster again
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars @ceph-override.json --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
       ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} \
@@ -187,6 +189,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mgrs {toxinidir}/tests/functional/setup.yml
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mgrs {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ireallymeanit=yes \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
@@ -201,6 +204,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mdss {toxinidir}/tests/functional/setup.yml
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit mdss {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ireallymeanit=yes \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
@@ -215,6 +219,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rbdmirrors {toxinidir}/tests/functional/setup.yml
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rbdmirrors {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ireallymeanit=yes \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
@@ -229,6 +234,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rgws {toxinidir}/tests/functional/setup.yml
   ansible-playbook -vv --diff -i {changedir}/hosts-2 --limit rgws {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
+      no_log_on_ceph_key_tasks=false \
       yes_i_know=true \
       ireallymeanit=yes \
       ceph_dev_branch={env:CEPH_DEV_BRANCH:main} \
