modules: Add _info modules
Validate modules test fails with:

Argument state includes get, list or info as a choice.
Functionality should be in an _info or (if further conditions apply) _facts module.

on modules ceph_crush_rule and ceph_key

With Ansible 2.8 and onwards best practice requires that modules
gathering info to be put in a separate module named _info[1]

[1]https://docs.ansible.com/ansible/latest/dev_guide/developing_modules_general.html#creating-an-info-or-a-facts-module

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/infrastructure-playbooks/ceph-keys.yml
+++ b/infrastructure-playbooks/ceph-keys.yml
@@ -50,7 +50,7 @@
       with_items: "{{ keys_to_delete }}"
 
     - name: Info ceph key(s)
-      ceph_key:
+      ceph_key_info:
         name: "{{ item }}"
         state: info
         cluster: "{{ cluster }}"
@@ -60,7 +60,7 @@
       with_items: "{{ keys_to_info }}"
 
     - name: List ceph key(s)
-      ceph_key:
+      ceph_key_info:
         state: list
         cluster: "{{ cluster }}"
         containerized: "{{ container_exec_cmd | default(False) }}"
