--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -382,7 +382,7 @@
             inventory_hostname in groups.get(rbdmirror_group_name, [])
 
     - name: Get the client.admin keyring
-      ceph_key:
+      ceph_key_info:
         name: client.admin
         cluster: "{{ cluster }}"
         output_format: plain
