--- a/roles/ceph-client/tasks/pre_requisite.yml
+++ b/roles/ceph-client/tasks/pre_requisite.yml
@@ -5,7 +5,7 @@
     - copy_admin_key | bool
   block:
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: client.admin
         cluster: "{{ cluster }}"
         output_format: plain
