--- a/roles/ceph-crash/tasks/main.yml
+++ b/roles/ceph-crash/tasks/main.yml
@@ -22,7 +22,7 @@
       no_log: "{{ no_log_on_ceph_key_tasks }}"
 
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: client.crash
         cluster: "{{ cluster }}"
         output_format: plain
