--- a/roles/ceph-mds/tasks/common.yml
+++ b/roles/ceph-mds/tasks/common.yml
@@ -11,7 +11,7 @@
     - /var/lib/ceph/mds/{{ cluster }}-{{ ansible_facts['hostname'] }}
 
 - name: Get keys from monitors
-  ceph_key:
+  ceph_key_info:
     name: "{{ item.name }}"
     cluster: "{{ cluster }}"
     output_format: plain
