--- a/roles/ceph-mgr/tasks/common.yml
+++ b/roles/ceph-mgr/tasks/common.yml
@@ -56,7 +56,7 @@
           - { 'name': "mgr.{{ ansible_facts['hostname'] }}", 'path': "/var/lib/ceph/mgr/{{ cluster }}-{{ ansible_facts['hostname'] }}/keyring", 'copy_key': true }
 
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: "{{ item.name }}"
         cluster: "{{ cluster }}"
         output_format: plain
