--- a/roles/ceph-mon/tasks/deploy_monitors.yml
+++ b/roles/ceph-mon/tasks/deploy_monitors.yml
@@ -3,7 +3,7 @@
   when: cephx | bool
   block:
     - name: Check if monitor initial keyring already exists
-      ceph_key:
+      ceph_key_info:
         name: mon.
         cluster: "{{ cluster }}"
         user: mon.
