--- a/roles/ceph-nfs/tasks/pre_requisite_container.yml
+++ b/roles/ceph-nfs/tasks/pre_requisite_container.yml
@@ -52,7 +52,7 @@
         - item.create | default(False) | bool
 
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: "{{ item.name }}"
         cluster: "{{ cluster }}"
         output_format: plain
