--- a/roles/ceph-osd/tasks/crush_rules.yml
+++ b/roles/ceph-osd/tasks/crush_rules.yml
@@ -52,10 +52,9 @@
   run_once: true
 
 - name: Get id for new default crush rule
-  ceph_crush_rule:
+  ceph_crush_rule_info:
     name: "{{ item.name }}"
     cluster: "{{ cluster }}"
-    state: info
   environment:
     CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment | bool else None }}"
     CEPH_CONTAINER_BINARY: "{{ container_binary }}"
