--- a/roles/ceph-rbd-mirror/tasks/configure_mirroring.yml
+++ b/roles/ceph-rbd-mirror/tasks/configure_mirroring.yml
@@ -4,7 +4,7 @@
     - cephx | bool
   block:
     - name: Get client.bootstrap-rbd-mirror from ceph monitor
-      ceph_key:
+      ceph_key_info:
         name: client.bootstrap-rbd-mirror
         cluster: "{{ cluster }}"
         output_format: plain
@@ -62,7 +62,7 @@
             secret: "{{ ceph_rbd_mirror_local_user_secret | default('') }}" }
 
     - name: Get client.rbd-mirror keyring from ceph monitor
-      ceph_key:
+      ceph_key_info:
         name: "client.rbd-mirror.{{ ansible_facts['hostname'] }}"
         cluster: "{{ cluster }}"
         output_format: plain
