--- a/roles/ceph-rgw/tasks/common.yml
+++ b/roles/ceph-rgw/tasks/common.yml
@@ -1,6 +1,6 @@
 ---
 - name: Get keys from monitors
-  ceph_key:
+  ceph_key_info:
     name: "{{ item.name }}"
     cluster: "{{ cluster }}"
     output_format: plain
