--- a/roles/ceph-exporter/tasks/main.yml
+++ b/roles/ceph-exporter/tasks/main.yml
@@ -23,7 +23,7 @@
       no_log: "{{ no_log_on_ceph_key_tasks }}"
 
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: client.ceph-exporter
         cluster: "{{ cluster }}"
         output_format: plain
