--- a/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
+++ b/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
@@ -47,7 +47,7 @@
     - groups.get(mon_group_name, []) | length > 0
   block:
     - name: Get keys from monitors
-      ceph_key:
+      ceph_key_info:
         name: "{{ item.name }}"
         cluster: "{{ cluster }}"
         output_format: plain
