--- a/roles/ceph-osd/tasks/common.yml
+++ b/roles/ceph-osd/tasks/common.yml
@@ -12,7 +12,7 @@
     - /var/lib/ceph/osd/
 
 - name: Get keys from monitors
-  ceph_key:
+  ceph_key_info:
     name: "{{ item.name }}"
     cluster: "{{ cluster }}"
     output_format: plain
