--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -950,7 +950,7 @@
             hosts:
               - {{ ansible_facts['nodename'] }}
           {% if rgw_subnet is defined %}
-          networks: "{{ radosgw_address_block }}"
+          networks: {{ radosgw_address_block.split(',') | list if ',' in radosgw_address_block else radosgw_address_block | string }}
           {% endif %}
           spec:
             rgw_frontend_port: {{ radosgw_frontend_port }}
