--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -942,6 +942,7 @@
     - name: Update the placement of radosgw hosts
       ceph_orch_apply:
         fsid: "{{ fsid }}"
+        cluster: "{{ cluster }}"
         spec: |
           service_type: rgw
           service_id: {{ ansible_facts['hostname'] }}
@@ -1480,6 +1481,7 @@
         - name: Update the placement of alertmanager hosts
           ceph_orch_apply:
             fsid: "{{ fsid }}"
+            cluster: "{{ cluster }}"
             spec: |
               service_type: alertmanager
               service_id: "{{ ansible_facts['hostname'] }}"
@@ -1502,6 +1504,7 @@
         - name: Update the placement of prometheus hosts
           ceph_orch_apply:
             fsid: "{{ fsid }}"
+            cluster: "{{ cluster }}"
             spec: |
               service_name: prometheus
               service_id: "{{ ansible_facts['hostname'] }}"
