--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -1016,6 +1016,7 @@
     - name: Update the placement of radosgw hosts
       ceph_orch_apply:
         fsid: "{{ fsid }}"
+        cluster: "{{ cluster }}"
         spec: |
           service_type: rgw
           service_id: {{ ansible_facts['hostname'] }}
@@ -1522,6 +1523,7 @@
         - name: Update the placement of alertmanager hosts
           ceph_orch_apply:
             fsid: "{{ fsid }}"
+            cluster: "{{ cluster }}"
             spec: |
               service_type: alertmanager
               service_id: "{{ ansible_facts['hostname'] }}"
@@ -1545,6 +1547,7 @@
         - name: Update the placement of prometheus hosts
           ceph_orch_apply:
             fsid: "{{ fsid }}"
+            cluster: "{{ cluster }}"
             spec: |
               service_type: prometheus
               service_id: "{{ ansible_facts['hostname'] }}"
