--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -954,7 +954,7 @@
           {% endif %}
           spec:
             rgw_frontend_port: {{ radosgw_frontend_port }}
-          {% if radosgw_frontend_ssl_certificate is defined %}
+          {% if radosgw_frontend_ssl_certificate | length > 0 %}
             {{ "ssl: true" }}
           {% endif %}
           extra_container_args:
@@ -1486,9 +1486,8 @@
               placement:
                 label: "{{ monitoring_group_name }}"
                 count: "{{ groups.get(monitoring_group_name, []) | length }}"
-              {% if grafana_server_addr is defined %}
-              networks:
-              - {{ grafana_server_addr }}
+              {% if grafana_network is defined %}
+              networks: {{ grafana_network.split(',') | list if ',' in grafana_network else [grafana_network] }}
               {% endif %}
           delegate_to: "{{ groups[mon_group_name][0] }}"
           environment:
@@ -1509,6 +1508,9 @@
               placement:
                 label: {{ monitoring_group_name }}
                 count: {{ groups.get(monitoring_group_name, []) | length }}
+              {% if grafana_network is defined %}
+              networks: {{ grafana_network.split(',') | list if ',' in grafana_network else [grafana_network] }}
+              {% endif %}
               {% if prometheus_port is defined and prometheus_port != 9095 %}
               spec:
                 port: {{ prometheus_port }}
