Allow to control dashboard standby_behaviour
In case of placing Ceph Dashboard behind of the LoadBalancer
user needs to ensure setting `dashboard_standby_behavior: error`
to notify the LoadBalancer which backend is currently active one
as suggested by the documentation [1]

[1] https://docs.ceph.com/en/reef/mgr/dashboard/#disable-the-redirection

Signed-off-by: Dmitriy Rabotyagov <noonedeadpunk@gmail.com>

--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -180,6 +180,12 @@
   run_once: true
   with_items: '{{ groups[mgr_group_name] | default(groups[mon_group_name]) }}'
 
+- name: Config dashboard standby behavior
+  ansible.builtin.command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} mgr/dashboard/standby_behaviour {{ dashboard_standby_behavior }}"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  changed_when: false
+  run_once: true
+
 - name: Disable mgr dashboard module (restart)
   ceph_mgr_module:
     name: dashboard
