--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -573,6 +573,7 @@ dashboard_grafana_api_no_ssl_verify: "{{ true if dashboard_protocol == 'https' a
 dashboard_rgw_api_user_id: ceph-dashboard
 dashboard_rgw_api_admin_resource: ''
 dashboard_rgw_api_no_ssl_verify: false
+dashboard_standby_behavior: redirect
 dashboard_frontend_vip: ''
 dashboard_disabled_features: []
 prometheus_frontend_vip: ''
