--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -371,6 +371,7 @@ dummy:
 #radosgw_frontend_port: 8080
 # The server private key, public certificate and any other CA or intermediate certificates should be in one file, in PEM format.
 #radosgw_frontend_ssl_certificate: ""
+#radosgw_frontend_ssl_key: ""
 #radosgw_frontend_ssl_certificate_data: "" # certificate contents to be written to path defined by radosgw_frontend_ssl_certificate
 #radosgw_frontend_options: ""
 #radosgw_thread_pool_size: 512
