Fix: osd_memory_target is now set correctly for hosts

--- a/roles/ceph-config/tasks/main.yml
+++ b/roles/ceph-config/tasks/main.yml
@@ -109,7 +109,7 @@
     - name: Set osd_memory_target to cluster host config
       ceph_config:
         action: set
-        who: "osd.*/{{ ansible_facts['hostname'] }}:host"
+        who: "osd/host:{{ ansible_facts['hostname'] }}"
         option: "osd_memory_target"
         value: "{{ _osd_memory_target }}"
       when:
